@@ -1,4 +1,7 @@
 2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* server-src/driver.c (server-src/driver.c): Remove function
+
+2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* server-src/driver.c (tape_action): Improvement
 
 2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
